src/objects/Business_Planning__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Contracted_Budget_Comment__c</fullName>
        <label>Actual Contracted Budget Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Contracted_Budget__c</fullName>
        <label>Actual Contracted Budget</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <inlineHelpText>Enter the date that effort begins on the study/project.</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver_Comment__c</fullName>
        <description>This field is created to store the Approver Comments</description>
        <label>Approver Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Sort_TF__c</fullName>
        <formula>IF( $User.Id ==  Approver__c , 1, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver_Sort_TF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>Approver__c</referenceTo>
        <relationshipName>RWE_Business_Planning_9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RWE_Business_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPType__c</fullName>
        <description>Business Plan classification</description>
        <inlineHelpText>Business Plan classification</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Study</fullName>
                    <color>#0B6FCE</color>
                    <label>Study</label>
                </value>
                <value>
                    <fullName>Research Project</fullName>
                    <color>#78C953</color>
                    <label>Research Project</label>
                </value>
                <value>
                    <fullName>Non-Research Project</fullName>
                    <color>#E27001</color>
                    <label>Non-Research Project</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Category__c</fullName>
        <inlineHelpText>Indicate whether this item is funded under a molecule, multi-molecule, or non-molecule category.</inlineHelpText>
        <label>Budget Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Molecule</fullName>
                </value>
                <value>
                    <fullName>Multi-Molecule</fullName>
                </value>
                <value>
                    <fullName>Non-Molecule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Critical_Rationale__c</fullName>
        <description>How does it help the brand? What is the impact? It is required based on country or regulatory requirements?</description>
        <inlineHelpText>How does it help the brand? What is the impact? It is required based on country or regulatory requirements?</inlineHelpText>
        <label>Business Critical Rationale</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Year__c</fullName>
        <inlineHelpText>If part of business planning, the year in which the planning occurs.  NOT the study start year</inlineHelpText>
        <label>Business Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Planning_Cycle_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Planning_Approval_Status__c</fullName>
        <label>Business Planning Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Discussion</fullName>
                    <color>#0B6FCE</color>
                    <label>In Discussion</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                    <color>#78C953</color>
                    <label>Ready for Approval</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <color>#E27001</color>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <color>#A845DC</color>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Approved/Reprioritize</fullName>
                    <color>#F3D904</color>
                    <label>Approved/Reprioritize</label>
                </value>
                <value>
                    <fullName>In-Waiting</fullName>
                    <color>#A53711</color>
                    <label>In-Waiting</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <color>#66E9BD</color>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#0B24BE</color>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Submitted for BP Approval</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for BP session</fullName>
                </value>
                <value>
                    <fullName>BP Review Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Planning_Cycle_Type__c</fullName>
        <inlineHelpText>Choose whether this item is being planned as part of a business planning cycle or if it added outside of a business planning cycle (a drop-in)</inlineHelpText>
        <label>Business Planning Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Business Planning Cycle</fullName>
                    <color>#0B6FCE</color>
                    <label>In Business Planning Cycle</label>
                </value>
                <value>
                    <fullName>Out of Business Planning Cycle</fullName>
                    <color>#78C953</color>
                    <label>Out of Business Planning Cycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Primary__c</fullName>
        <label>Business Unit (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetes (DBU)</fullName>
                    <color>#78C953</color>
                    <label>Diabetes (DBU)</label>
                </value>
                <value>
                    <fullName>EMBU</fullName>
                    <color>#A845DC</color>
                    <label>EMBU</label>
                </value>
                <value>
                    <fullName>Elanco</fullName>
                    <color>#F3D904</color>
                    <label>Elanco</label>
                </value>
                <value>
                    <fullName>Non Business Unit Specific</fullName>
                    <color>#A53711</color>
                    <label>Non Business Unit Specific</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Epidemiological Research</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Research</fullName>
                </value>
                <value>
                    <fullName>Secondary Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date_TF__c</fullName>
        <label>Completed Date TF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conducted_with_an_RWE_partner__c</fullName>
        <label>Conducted with an RWE partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_Date__c</fullName>
        <label>Contracted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a comprehensive description that would include keywords that other users might use to search.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disease_State__c</fullName>
        <label>Disease State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Therapeutic_Area_Primary__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Alopecia Areata</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease Psychosis</fullName>
                </value>
                <value>
                    <fullName>Anemia</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Atopic Dermatitis</fullName>
                </value>
                <value>
                    <fullName>Attention Deficit-Hyperactivity Disorder</fullName>
                </value>
                <value>
                    <fullName>AxSpA (Axial Spondyloarthritis)</fullName>
                </value>
                <value>
                    <fullName>Bladder Cancer</fullName>
                </value>
                <value>
                    <fullName>Bone and Soft Tissue Cancers</fullName>
                </value>
                <value>
                    <fullName>Breast Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Kidney Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Cluster Headache</fullName>
                </value>
                <value>
                    <fullName>Colorectal Cancer</fullName>
                </value>
                <value>
                    <fullName>Crohn’s Disease</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Disuse Atrophy</fullName>
                </value>
                <value>
                    <fullName>Erectile Dysfunction</fullName>
                </value>
                <value>
                    <fullName>Gastrointestinal Cancer</fullName>
                </value>
                <value>
                    <fullName>Genitourinary Cancer</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Head and Neck Cancer</fullName>
                </value>
                <value>
                    <fullName>Hematologic Cancer</fullName>
                </value>
                <value>
                    <fullName>Hepatocellular Cancer</fullName>
                </value>
                <value>
                    <fullName>High Risk Vascular Disease</fullName>
                </value>
                <value>
                    <fullName>Juvenile Idiopathic Arthritis</fullName>
                </value>
                <value>
                    <fullName>Lung and Thoracic Cancer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <inlineHelpText>The approximate date that you think the study will be completed.  May also use the target date for certain deliverables if required for submission, critical chain etc.</inlineHelpText>
        <label>Anticipated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <inlineHelpText>Choose the date that effort is anticipated to begin on the study/project (this is NOT the expected contracting date)</inlineHelpText>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executing_Function__c</fullName>
        <inlineHelpText>The function that the owner belongs to that will be conducting the study/project.</inlineHelpText>
        <label>Executing Function For Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPORWE</fullName>
                    <color>#0B6FCE</color>
                    <label>GPORWE</label>
                </value>
                <value>
                    <fullName>GPS</fullName>
                    <color>#78C953</color>
                    <label>GPS</label>
                </value>
                <value>
                    <fullName>Medical</fullName>
                    <color>#E27001</color>
                    <label>Medical</label>
                </value>
                <value>
                    <fullName>Japan Affiliate</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs - EMBU</fullName>
                    <color>#A845DC</color>
                    <label>Medical Affairs - EMBU</label>
                </value>
                <value>
                    <fullName>Medical Affairs - EUCAN</fullName>
                    <color>#F3D904</color>
                    <label>Medical Affairs - EUCAN</label>
                </value>
                <value>
                    <fullName>Medical Affairs - Global/Corporate</fullName>
                    <color>#A53711</color>
                    <label>Medical Affairs - Global/Corporate</label>
                </value>
                <value>
                    <fullName>Medical Affairs - US</fullName>
                    <color>#66E9BD</color>
                    <label>Medical Affairs - US</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executing_Year__c</fullName>
        <description>stores the Range of years between Anticipated Start &amp; End Date</description>
        <formula>CASE(YEAR(Estimated_End_Date__c) - YEAR(Estimated_Start_Date__c), 
1,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1), 
2,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2), 
3,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3), 
4,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4), 
5,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5), 
6,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+6), 
7,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+7), 
8,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+8), 
9,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+8)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+9), 
10,TEXT(YEAR(Estimated_Start_Date__c))+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+1)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+2)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+3)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+4)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+5)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+6)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+7)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+8)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+9)+&apos;, &apos;+TEXT(YEAR(Estimated_Start_Date__c)+10),
TEXT(YEAR(Estimated_Start_Date__c)))</formula>
        <label>Executing Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_funding_the_study_project__c</fullName>
        <inlineHelpText>Choose the function that is providing the budget for the study/project</inlineHelpText>
        <label>Function funding the study/project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPORWE</fullName>
                    <color>#0B6FCE</color>
                    <label>GPORWE</label>
                </value>
                <value>
                    <fullName>GPS</fullName>
                    <color>#78C953</color>
                    <label>GPS</label>
                </value>
                <value>
                    <fullName>Medical</fullName>
                    <color>#66E9BD</color>
                    <label>Medical</label>
                </value>
                <value>
                    <fullName>Medical Affairs - EMBU</fullName>
                    <color>#A53711</color>
                    <label>Medical Affairs - EMBU</label>
                </value>
                <value>
                    <fullName>Medical Affairs - EUCAN</fullName>
                    <color>#F3D904</color>
                    <label>Medical Affairs - EUCAN</label>
                </value>
                <value>
                    <fullName>Medical Affairs - Global/Corporate</fullName>
                    <color>#E27001</color>
                    <label>Medical Affairs - Global/Corporate</label>
                </value>
                <value>
                    <fullName>Medical Affairs - US</fullName>
                    <color>#A845DC</color>
                    <label>Medical Affairs - US</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPORWE_Functional_Area__c</fullName>
        <label>Sub-Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Executing_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Biomedicines</fullName>
                    <color>#0B6FCE</color>
                    <label>Biomedicines</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                    <color>#78C953</color>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>China</fullName>
                    <color>#E27001</color>
                    <label>China</label>
                </value>
                <value>
                    <fullName>COE</fullName>
                    <color>#A845DC</color>
                    <label>COE</label>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                    <color>#F3D904</color>
                    <label>Diabetes</label>
                </value>
                <value>
                    <fullName>France Hub</fullName>
                    <color>#A53711</color>
                    <label>France Hub</label>
                </value>
                <value>
                    <fullName>Germany Hub</fullName>
                    <color>#66E9BD</color>
                    <label>Germany Hub</label>
                </value>
                <value>
                    <fullName>HTA-CE</fullName>
                    <color>#0B24BE</color>
                    <label>HTA-CE</label>
                </value>
                <value>
                    <fullName>HTA-EMBU/J</fullName>
                    <color>#419249</color>
                    <label>HTA-EMBU/J</label>
                </value>
                <value>
                    <fullName>Italy Hub</fullName>
                    <color>#B6E32E</color>
                    <label>Italy Hub</label>
                </value>
                <value>
                    <fullName>Korea</fullName>
                    <color>#641CCF</color>
                    <label>Korea</label>
                </value>
                <value>
                    <fullName>LBM-AI/BMJ</fullName>
                    <color>#F96FB7</color>
                    <label>LBM-AI/BMJ</label>
                </value>
                <value>
                    <fullName>LBM-CV/URO</fullName>
                    <color>#2F5D85</color>
                    <label>LBM-CV/URO</label>
                </value>
                <value>
                    <fullName>LBM-NS</fullName>
                    <color>#AFCADF</color>
                    <label>LBM-NS</label>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                    <color>#8F6429</color>
                    <label>Oncology</label>
                </value>
                <value>
                    <fullName>PMO</fullName>
                    <color>#EFAE73</color>
                    <label>PMO</label>
                </value>
                <value>
                    <fullName>PRO</fullName>
                    <color>#57F17C</color>
                    <label>PRO</label>
                </value>
                <value>
                    <fullName>Spain Hub</fullName>
                    <color>#0B6FCE</color>
                    <label>Spain Hub</label>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                    <color>#78C953</color>
                    <label>Taiwan</label>
                </value>
                <value>
                    <fullName>UK Hub</fullName>
                    <color>#E27001</color>
                    <label>UK Hub</label>
                </value>
                <value>
                    <fullName>US Biomedicines</fullName>
                    <color>#A845DC</color>
                    <label>US Biomedicines</label>
                </value>
                <value>
                    <fullName>US Diabetes</fullName>
                    <color>#F3D904</color>
                    <label>US Diabetes</label>
                </value>
                <value>
                    <fullName>USHO</fullName>
                    <color>#A53711</color>
                    <label>USHO</label>
                </value>
                <value>
                    <fullName>US Oncology</fullName>
                    <color>#66E9BD</color>
                    <label>US Oncology</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#0B24BE</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSC_Support__c</fullName>
        <inlineHelpText>Indicate the type of support needed for publications</inlineHelpText>
        <label>Writing Support for Publications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TPO executing study will support publications</fullName>
                </value>
                <value>
                    <fullName>GSC managed writing support</fullName>
                </value>
                <value>
                    <fullName>GPORWE resources at LCCI</fullName>
                </value>
                <value>
                    <fullName>No writing support needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_will_the_Study_be_executed__c</fullName>
        <description>Will the study/project be fully or partially outsourced to a TPO? Or will the study/project be conducted using internal resources (e.g. Data Mart, functionally sourced studies, etc.)</description>
        <inlineHelpText>Will the study/project be fully or partially outsourced to a TPO? Or will the study/project be conducted using internal resources (e.g. Data Mart, functionally sourced studies, etc.)</inlineHelpText>
        <label>How will the Study/Project be executed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>TPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Waiting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Waiting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field indicates which indication the study/project is connected to or is primarily supporting.  If externally contracted, this line will be the PLI line in SAP upon which the money is budgeted. Contact your PM if you are unsure.</inlineHelpText>
        <label>Indication</label>
        <referenceTo>DRDP_Indication__c</referenceTo>
        <relationshipName>RWE_Business_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Anticipated_Start_Date__c</fullName>
        <label>Initial Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_budget_estimate_for_each_item__c</fullName>
        <inlineHelpText>Enter the estimated cost of the study/project.  See the related Budget Estimate Guidance for further information on typical study costs.</inlineHelpText>
        <label>Budget Estimate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_to_Actual__c</fullName>
        <formula>Actual_Start_Date__c  -  Initial_Anticipated_Start_Date__c</formula>
        <inlineHelpText>Days between &quot;Initial Anticipated Start Date&quot; to &quot;Actual Start Date&quot;</inlineHelpText>
        <label>Initial to Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_to_Anticipated__c</fullName>
        <formula>Estimated_Start_Date__c - Initial_Anticipated_Start_Date__c</formula>
        <inlineHelpText>Days between &quot;Initial Anticipated Start Date&quot; to &quot;Anticipated Start Date&quot;</inlineHelpText>
        <label>Initial to Anticipated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Statistical_Programming_Support__c</fullName>
        <inlineHelpText>Indicate if statistical programming support is needed</inlineHelpText>
        <label>Internal Statistical Programming Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Statistician_Support__c</fullName>
        <inlineHelpText>Indicate if any statistical support is needed and what kind</inlineHelpText>
        <label>Internal Statistician Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Support</fullName>
                </value>
                <value>
                    <fullName>Full Support – Internal Stats</fullName>
                </value>
                <value>
                    <fullName>Oversight – Review Work from the Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPMError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPMError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Data_Asset_Known__c</fullName>
        <label>Is the Data Asset Known?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents any changes to the item. Item must be frozen before changing to &quot;Ready for Approval&quot;</inlineHelpText>
        <label>Freeze</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>